<resources>
    <string name="app_name">grupoTres</string>
    <string name="btn_press_me">Presióname</string>
    <string name="desc_rate">Calificar</string>
    <string name="desc_sound">Sonido</string>
    <string name="desc_rules">Instrucciones</string>
    <string name="desc_challenges">Retos</string>
    <string name="desc_share">Compartir</string>
    <string name="desc_bottle">Botella</string>
    <string name="share_message">App pico botella\nSolo los valientes lo juegan !!\nDescárgala aquí: https://play.google.com/store/apps/details?id=com.nequi.MobileApp</string>
    <string name="title_how_to_play">¿Cómo se juega?</string>
    <string name="desc_how_to_play">Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella.\nEl jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego.</string>
    <string name="title_who_wins">¿Quién gana?</string>
    <string name="desc_who_wins">Gana el último jugador que no abandone el juego.</string>
    <string name="desc_trophy">Trofeo de ganador</string>
    <string name="title_rules">Reglas del Juego</string>
    <string name="desc_back">Volver al Home</string>
    <string name="desc_logout">Cerrar sesión</string>
    <string name="title_login">pico botella</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_register">Registrarse</string>
</resources>