<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.LoginFragment">

    <!-- Criterio 2: Título pico botella -->
    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/title_login"
        android:textColor="@color/orange_bright"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Criterio 3: Campo Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/LoginTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/hint_email"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Criterio 4, 5 y 6: Campo Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/LoginTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:errorEnabled="true"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/login_button_selector"
        android:enabled="false"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/login_button_text_selector"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="28dp"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <TextView
        android:id="@+id/tv_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:text="@string/text_register"
        android:textColor="@color/register_text_selector"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <!-- Criterio 15: Diseño de ondas blancas -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="Bottom Waves"
        android:scaleType="fitXY"
        android:src="@drawable/login_waves"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>